--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@plasmicapp/host": "^1.0.68",
     "@plasmicapp/react-web": "^0.2.100",
     "@plasmicpkgs/plasmic-nav": "^0.0.37",
+    "@types/lodash": "^4.14.182",
+    "lodash": "^4.17.21",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
