--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@plasmicapp/react-web": "^0.2.100",
     "@plasmicpkgs/plasmic-nav": "^0.0.37",
     "@types/lodash": "^4.14.182",
+    "@types/mercadopago": "^1.5.6",
     "lodash": "^4.17.21",
+    "mercadopago": "^1.5.13",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-json-pretty": "^2.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
