--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-json-pretty": "^2.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "valtio": "^1.6.3"
   },
   "devDependencies": {
     "@types/node": "18.0.1",
