--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@plasmicapp/react-web": "^0.2.100",
     "@plasmicpkgs/plasmic-basic-components": "^0.0.74",
     "@plasmicpkgs/plasmic-nav": "^0.0.37",
+    "@supabase/supabase-js": "^1.35.6",
     "@types/lodash": "^4.14.182",
     "@types/mercadopago": "^1.5.6",
     "contentful": "^9.1.32",
