--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "@plasmicapp/cli": "^0.1.183",
     "@plasmicapp/host": "^1.0.68",
     "@plasmicapp/query": "^0.1.51",
-    "@plasmicapp/react-web": "^0.2.100",
+    "@plasmicapp/react-web": "^0.2.107",
     "@plasmicpkgs/plasmic-basic-components": "^0.0.74",
+    "@plasmicpkgs/plasmic-embed-css": "^0.1.60",
     "@plasmicpkgs/plasmic-nav": "^0.0.37",
     "@supabase/supabase-js": "^1.35.6",
     "@types/lodash": "^4.14.182",
     "@types/mercadopago": "^1.5.6",
+    "@types/qs": "^6.9.7",
     "contentful": "^9.1.32",
     "lodash": "^4.17.21",
     "mercadopago": "^1.5.13",
     "next": "12.2.0",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-json-pretty": "^2.2.0",
+    "react-to-print": "^2.14.7",
     "swr": "^1.3.0",
     "valtio": "^1.6.3"
   },
