--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/mercadopago": "^1.5.6",
     "@types/qs": "^6.9.7",
     "contentful": "^9.1.32",
+    "google-auth-library": "^8.9.0",
+    "googleapis": "^120.0.0",
     "lodash": "^4.17.21",
     "mercadopago": "^1.5.13",
     "next": "12.2.0",
