--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^15.13.1",
     "@plasmicapp/cli": "^0.1.187",
+    "@plasmicapp/prepass": "^1.0.2",
     "@plasmicapp/query": "^0.1.61",
     "@plasmicapp/react-web": "^0.2.236",
     "@plasmicpkgs/plasmic-basic-components": "^0.0.74",
